--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -71,11 +71,11 @@ jobs:
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.PROD_IP }}
-          username: ${{ matrix.server.username }}
+          username: ${{ secrets.USERNAME }}
           key: ${{ secrets.KEY }}
-          port: ${{ matrix.server.port }}
+          port: ${{ secrets.PORT }}
           source: ${{ github.sha }}.tar.gz
-          target: ${{ matrix.server.path }}/artifacts
+          target: ${{ secrets.PATH }}/artifacts
       
       - name: Extract Archive And Create Directories
         uses: appleboy/ssh-action@master
@@ -83,21 +83,21 @@ jobs:
           GITHUB_SHA: ${{ github.sha }}
         with:
           host: ${{ secrets.PROD_IP }}
-          username: ${{ matrix.server.username }}
+          username: ${{ secrets.USERNAME }}
           key: ${{ secrets.KEY }}
-          port: ${{ matrix.server.port }}
+          port: ${{ secrets.PORT }}
           envs: GITHUB_SHA
           script: |
-            mkdir -p "${{ matrix.server.path }}/releases/${GITHUB_SHA}"
-            tar xzf ${{ matrix.server.path }}/artifacts/${GITHUB_SHA}.tar.gz -C "${{ matrix.server.path }}/releases/${GITHUB_SHA}"
-            rm -rf ${{ matrix.server.path }}/releases/${GITHUB_SHA}/storage
-            mkdir -p ${{ matrix.server.path }}/storage/{app,public,framework,logs}
-            mkdir -p ${{ matrix.server.path }}/storage/framework/{cache,sessions,testing,views}
-            mkdir -p ${{ matrix.server.path }}/storage/framework/cache/data
-            chmod -R 0777 ${{ matrix.server.path }}/storage
+            mkdir -p "${{ secrets.PATH }}/releases/${GITHUB_SHA}"
+            tar xzf ${{ secrets.PATH }}/artifacts/${GITHUB_SHA}.tar.gz -C "${{ secrets.PATH }}/releases/${GITHUB_SHA}"
+            rm -rf ${{ secrets.PATH }}/releases/${GITHUB_SHA}/storage
+            mkdir -p ${{ secrets.PATH }}/storage/{app,public,framework,logs}
+            mkdir -p ${{ secrets.PATH }}/storage/framework/{cache,sessions,testing,views}
+            mkdir -p ${{ secrets.PATH }}/storage/framework/cache/data
+            chmod -R 0777 ${{ secrets.PATH }}/storage
   
   run-before-hooks:
-    name: "${{ matrix.server.name }}: Before Hook"
+    name: "${{ secrets.PROD_NAME }}: Before Hook"
     runs-on: ubuntu-latest
     needs: [outafrica, prepare-release-on-server]
     strategy: 
@@ -108,21 +108,21 @@ jobs:
         uses: appleboy/ssh-action@master
         env: 
           GITHUB_SHA: ${{ github.sha }}
-          RELEASE_PATH: ${{ matrix.server.path }}/releases/${{ github.sha }}
-          ACTIVE_RELEASE_PATH: ${{ matrix.server.path }}/current
-          STORAGE_PATH: ${{ matrix.server.path }}/storage
-          BASE_PATH: ${{ matrix.server.path }}
+          RELEASE_PATH: ${{ secrets.PATH }}/releases/${{ github.sha }}
+          ACTIVE_RELEASE_PATH: ${{ secrets.PATH }}/current
+          STORAGE_PATH: ${{ secrets.PATH }}/storage
+          BASE_PATH: ${{ secrets.PATH }}
         with:
           host: ${{ secrets.PROD_IP }}
-          username: ${{ matrix.server.username }}
+          username: ${{ secrets.USERNAME }}
           key: ${{ secrets.KEY }}
-          port: ${{ matrix.server.port }}
+          port: ${{ secrets.PORT }}
           envs: GITHUB_SHA, RELEASE_PATH, ACTIVE_RELEASE_PATH, STORAGE_PATH, BASE_PATH
           script: |
             ${{ matrix.server.beforeHooks }}
       
   activate-release:
-    name: "${{ matrix.server.name }}: Activate Release"
+    name: "${{ secrets.PROD_NAME }}: Activate Release"
     runs-on: ubuntu-latest
     needs: [outafrica, prepare-release-on-server, run-before-hooks]
     strategy: 
@@ -133,16 +133,16 @@ jobs:
         uses: appleboy/ssh-action@master
         env: 
           GITHUB_SHA: ${{ github.sha }}
-          RELEASE_PATH: ${{ matrix.server.path }}/releases/${{ github.sha }}
-          ACTIVE_RELEASE_PATH: ${{ matrix.server.path }}/current
-          STORAGE_PATH: ${{ matrix.server.path }}/storage
-          BASE_PATH: ${{ matrix.server.path }}
+          RELEASE_PATH: ${{ secrets.PATH }}/releases/${{ github.sha }}
+          ACTIVE_RELEASE_PATH: ${{ secrets.PATH }}/current
+          STORAGE_PATH: ${{ secrets.PATH }}/storage
+          BASE_PATH: ${{ secrets.PATH }}
           PROD_ENV: ${{ secrets.PROD_ENV}}
         with:
           host: ${{ secrets.PROD_IP }}
-          username: ${{ matrix.server.username }}
+          username: ${{ secrets.USERNAME }}
           key: ${{ secrets.KEY }}
-          port: ${{ matrix.server.port }}
+          port: ${{ secrets.PORT }}
           envs: GITHUB_SHA, RELEASE_PATH, ACTIVE_RELEASE_PATH, STORAGE_PATH, BASE_PATH, PROD_ENV
           script: |
             printf "%s" "$PROD_ENV" > "${BASE_PATH}/.env"
