Update Workflows server name

--- a/deployment_config.json
+++ b/deployment_config.json
@@ -1,6 +1,6 @@
 [
     {
-        "name": "",
+        "name": "outafrica",
         "username": "",
         "port": "",
         "beforeHooka": "",
