--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -97,7 +97,7 @@ jobs:
             chmod -R 0777 ${{ secrets.PATH }}/storage
   
   run-before-hooks:
-    name: "${{ secrets.PROD_NAME }}: Before Hook"
+    name: "${{ matrix.server.name }}: Before Hook"
     runs-on: ubuntu-latest
     needs: [outafrica, prepare-release-on-server]
     strategy: 
@@ -122,7 +122,7 @@ jobs:
             ${{ matrix.server.beforeHooks }}
       
   activate-release:
-    name: "${{ secrets.PROD_NAME }}: Activate Release"
+    name: "${{ matrix.server.name }}: Activate Release"
     runs-on: ubuntu-latest
     needs: [outafrica, prepare-release-on-server, run-before-hooks]
     strategy: 
