--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "dayjs": "^1.11.7",
-        "vue-router": "^4.1.6"
+        "vue-router": "^4.1.6",
+        "vue-toast-notification": "3.0"
     }
 }
